methods.picture.MethodsPicture.scala.error
Compilation error:
MethodsPicture:13: error: '<-' expected but ')' found.
  for (i to 3){for (i<- 1 to 3) {pattern();avance(5)};gauche();avance(5);droite()}
             ^MethodsPicture:14: error: illegal start of simple expression
} 
^