methods.picture.MethodsPicture.scala.code
def marquer (c:color) = {setCouleurBrosse(c);baisseBrosse();leveBrosse()}
def faireV () {
  marquer()
  gauche();avance();droite();avance()
  marquer()
  avance();droite();avance()
  marquer()
}

def pattern () {avance();faireV(Color.YELLOW);droite();droite();avance();faireV(Color.RED);droite();droite();avance();faireV(Color.BLUE);droite();droite();avance();faireV(Color.GREEN);gauche();avance();gauche()}

override def run() {
  for (i to 3){for (i<- 1 to 3) {pattern();avance(5)};gauche();avance(5);droite()}
}